--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,113 @@
-anndata
-bbknn
-igraph
-keras
-leidenalg
-lime
-louvain
-numpy
-openpyxl
-pandas
-phate
-pot
-pybiomart
-scanpy
-scanorama
-scipy
-scikit-learn
-tensorflow
-torch
-tqdm
-umap-learn
-
+absl-py==2.3.1
+anndata==0.12.2
+annoy==1.17.3
+array-api-compat==1.12.0
+astunparse==1.6.3
+attrs==25.3.0
+bbknn==1.6.0
+cattrs==25.1.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+contourpy==1.3.3
+crc32c==2.7.1
+cycler==0.12.1
+Cython==3.1.3
+decorator==5.2.1
+Deprecated==1.2.18
+donfig==0.8.1.post1
+et_xmlfile==2.0.0
+fbpca==1.0
+filelock==3.19.1
+flatbuffers==25.2.10
+fonttools==4.59.1
+fsspec==2025.7.0
+future==1.0.0
+gast==0.6.0
+geosketch==1.3
+google-pasta==0.2.0
+graphtools==1.5.3
+grpcio==1.74.0
+h5py==3.14.0
+idna==3.10
+igraph==0.11.9
+imageio==2.37.0
+intervaltree==3.1.0
+Jinja2==3.1.6
+joblib==1.5.1
+keras==3.11.3
+kiwisolver==1.4.9
+lazy_loader==0.4
+legacy-api-wrap==1.4.1
+leidenalg==0.10.2
+libclang==18.1.1
+lime==0.2.0.1
+llvmlite==0.44.0
+louvain==0.8.2
+Markdown==3.8.2
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+mdurl==0.1.2
+ml_dtypes==0.5.3
+mpmath==1.3.0
+namex==0.1.0
+natsort==8.4.0
+networkx==3.5
+numba==0.61.2
+numcodecs==0.16.2
+numpy==2.2.6
+openpyxl==3.1.5
+opt_einsum==3.4.0
+optree==0.17.0
+packaging==25.0
+pandas==2.3.2
+patsy==1.0.1
+phate==1.0.11
+pillow==11.3.0
+platformdirs==4.3.8
+POT==0.9.5
+protobuf==6.32.0
+pybiomart==0.2.0
+Pygments==2.19.2
+PyGSP==0.5.1
+pynndescent==0.5.13
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.5
+requests-cache==1.2.1
+rich==14.1.0
+s_gd2==1.8.1
+scanorama==1.7.4
+scanpy==1.11.4
+scikit-image==0.25.2
+scikit-learn==1.7.1
+scipy==1.16.1
+scprep==1.1.0
+seaborn==0.13.2
+session-info2==0.2.1
+setuptools==80.9.0
+six==1.17.0
+sortedcontainers==2.4.0
+statsmodels==0.14.5
+sympy==1.14.0
+tasklogger==1.2.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.1.0
+texttable==1.7.0
+threadpoolctl==3.6.0
+tifffile==2025.6.11
+torch==2.8.0
+tqdm==4.67.1
+typing_extensions==4.14.1
+tzdata==2025.2
+umap-learn==0.5.9.post2
+url-normalize==2.2.1
+urllib3==2.5.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.3
+zarr==3.1.1
